--- a/index.html
+++ b/index.html
@@ -280,32 +280,40 @@
     </section>
 
     <!-- Contact Section -->
-    <section
-      id="contact"
-      class="py-16 bg-gradient-to-r from-yellow-400 via-yellow-500 to-yellow-600 text-gray-900"
-    >
-      <div class="container mx-auto text-center">
-        <h2 class="text-4xl font-bold mb-6">Contact Me</h2>
-        <p class="text-lg mb-8">
-           Feel free to reach out to me via LinkedIn, Email or GitHub.
-        </p>
-        <a
-          href="https://www.linkedin.com/in/arunima-d-s-2b60502b7/"
-          class="inline-block bg-gray-900 text-white py-3 px-6 rounded-full shadow-lg hover:bg-gray-700 transition"
-          ><i class="fab fa-linkedin"></i> LinkedIn</a
-        >
-        <a
-          href="mailto:dsarunima7@gmail.com"
-          class="inline-block bg-gray-900 text-white py-3 px-6 rounded-full shadow-lg hover:bg-gray-700 transition ml-4"
-          ><i class="fas fa-envelope"></i> Email</a
-        >
-        <a
-          href="https://github.com/Arunimads"
-          class="inline-block bg-gray-900 text-white py-3 px-6 rounded-full shadow-lg hover:bg-gray-700 transition ml-4"
-          ><i class="fa-brands fa-github"></i> GitHub</a
-        >
-      </div>
-    </section>
+<section
+id="contact"
+class="py-16 bg-gradient-to-r from-yellow-400 via-yellow-500 to-yellow-600 text-gray-900"
+>
+<div class="container mx-auto text-center">
+  <h2 class="text-4xl font-bold mb-6">Contact Me</h2>
+  <p class="text-lg mb-8">
+    Feel free to reach out to me via LinkedIn, Email, or GitHub.
+  </p>
+  <a
+    href="https://www.linkedin.com/in/arunima-d-s-2b60502b7/"
+    class="inline-block bg-gray-900 text-white py-3 px-6 rounded-full shadow-lg hover:bg-gray-700 transition"
+    ><i class="fab fa-linkedin"></i> LinkedIn</a
+  >
+  <a
+    href="mailto:dsarunima7@gmail.com"
+    class="inline-block bg-gray-900 text-white py-3 px-6 rounded-full shadow-lg hover:bg-gray-700 transition ml-4"
+    ><i class="fas fa-envelope"></i> Email</a
+  >
+  <a
+    href="https://github.com/Arunimads"
+    class="inline-block bg-gray-900 text-white py-3 px-6 rounded-full shadow-lg hover:bg-gray-700 transition ml-4"
+    ><i class="fab fa-github"></i> GitHub</a
+  >
+  <!-- Download Resume Button -->
+  <a
+    href="img/resume.pdf"
+    download="Arunima_DS_Resume.pdf"
+    class="inline-block bg-gray-900 text-white py-3 px-6 rounded-full shadow-lg hover:bg-gray-700 transition ml-4"
+    ><i class="fas fa-file-download"></i> Download Resume</a
+  >
+</div>
+</section>
+
 
     <footer class="bg-gray-900 text-white text-center p-4">
       <p>&copy; 2024 Arunima DS | All Rights Reserved</p>
